<resources>
    <string name="app_name">Nights Out</string>
    <string name="fragment_home_name">Home</string>
    <string name="fragment_log_name">Log</string>
    <string name="fragment_profile_name">Profile</string>
    <string name="add_drink">Add Drink</string>
    <string name="save_profile">Save Profile</string>
    <string name="start_drinking">Start Drinking</string>
    <string name="end_drinking">End Drinking</string>
    <string name="log_session">Log Session</string>
    <string name="remove">Remove</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="favorites">Favorites</string>
    <string name="favorites_quick_fill">Favorites - Quick Fill</string>
    <string name="recents_quick_fill">Recents - Quick Fill</string>
    <string name="name">Name</string>
    <string name="abv">A.B.V.</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="add_and_favorite">Add And Favorite</string>
    <string name="percent">%</string>
    <string name="empty"> </string>
    <string name="drink">Drink</string>
    <string name="edit">Edit</string>
    <string name="edit_drink">Edit Drink</string>
    <string name="no_drinks_yet">No Drinks Yet</string>
    <string name="no_recent_drinks">No Recent Drinks</string>
    <string name="no_favorite_drinks">No Favorite Drinks</string>
    <string name="you_did_no_drink_this_day">You Did Not Drink This Day</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="add_another">Add Another</string>
    <string name="favorite_drink">Favorite Drink</string>
    <string name="unfavorite_drink">Unfavorite Drink</string>
    <string name="unsaved_profile_changes">Unsaved Profile Changes</string>
    <string name="are_you_sure_you_want_to_abandon_changes">Are you sure you want to abandon unsaved profile changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bac_level">BAC Level: </string>
    <string name="drinking_duration">Drinking Duration: </string>
    <string name="standard_drinks_consumed">Standard Drinks Consumed: </string>
    <string name="time_to_sober">Approximate Time Until Sober: </string>
    <string name="dismiss">dismiss</string>
    <string name="info">info</string>
    <string name="clear_favorites_list">Clear Favorites List</string>
    <string name="clear_recents_list">Clear Recents List</string>
    <string name="clear_drink_list">Clear Drink List</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="clear_all_logs">Clear All Logs</string>
    <string name="clear_selected_day_logs">Clear Logs for Selected Day</string>
    <string name="update_log">Update Log</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="multiple_alcohol_sources">Multiple Alcohol Sources</string>
    <string name="add_alcohol_source">Add Alcohol Source</string>
    <string name="move_selected_log">Move Selected Log</string>
    <string name="disclaimer_body">The BAC value provided by the app is only an estimate. The status
        given by the app is an estimation based on the calculated BAC. Your actual BAC will vary
        depending on a host of different factors, such as your hydration status, recent meals,
        fluid intake, kidney function, and much more. A breathalyzer or blood test is the only way
        to have an accurate measurement.</string>
    <string name="fragment_manage_db_name">Manage Database</string>
    <string name="reset_db">Reset Database</string>
    <string name="reset_db_confirmation">Are you sure? You will lose everything.</string>
    <string name="show_auto_complete_suggestion">Show In Suggestions List</string>
    <string name="hide_auto_complete_suggestion">Hide In Suggestions List</string>
    <string name="delete_drink">Delete Drink</string>
    <string name="clean_db">Clean Database</string>
    <string name="rate">Rate</string>
    <string name="dont_show_again">Don\'t Show Again</string>
    <string name="later">Later</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="show_bac_notification">Show Current BAC Notification</string>
    <string name="search">Search</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="theme">Theme</string>
    <string name="time">Time</string>
    <string name="use_24_hour_time">Use 24 Hour Time</string>
    <string-array name="volume_measurements">
        <item>ml</item>
        <item>oz</item>
        <item>beers</item>
        <item>shots</item>
        <item>wine glasses</item>
        <item>pints</item>
    </string-array>
</resources>
