<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.MainActivity">
    <item
        android:id="@+id/btn_toolbar_home_done"
        android:title="@string/log_session"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_toolbar_manage_db"
        android:title="@string/fragment_manage_db_name"
        app:showAsAction="never"/>
    <item
        android:id="@+id/btn_clear_drink_list"
        android:title="@string/clear_drink_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/btn_toolbar_toggle_time_display"
        android:title="@string/empty"
        app:showAsAction="never"/>

    <item
        android:id="@+id/btn_toolbar_toggle_dark_mode"
        android:title="Toggle Dark Mode"
        app:showAsAction="never"/>

    <item
        android:id="@+id/btn_toolbar_notification_settings"
        android:title="@string/notification_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/btn_disclaimer"
        android:title="@string/disclaimer"
        app:showAsAction="never" />

</menu>