<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btn_toolbar_complex_drink"
        android:title="@string/complex_drink"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_toolbar_favorite"
        android:icon="@drawable/favorite_border_white_24dp"
        android:title="@string/log_session"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_clear_recents_list"
        android:title="@string/clear_recents_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/btn_clear_favorites_list"
        android:title="@string/clear_favorites_list"
        app:showAsAction="never" />
</menu>