<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_drink_modify_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/drink"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_toStartOf="@+id/imgBtn_drink_modify_close"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:id="@+id/imgBtn_drink_modify_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close_gray_18dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:padding="8dp"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/empty"
        android:layout_alignTop="@+id/text_drink_modify_title"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/text_drink_modify_title"/>

    <TextView
        android:id="@+id/text_drink_modify_add_another"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableStart="@drawable/add_gray_24dp"
        android:drawablePadding="12dp"
        android:focusable="true"
        android:padding="8dp"
        android:text="@string/add_another"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:layout_below="@id/line"/>

    <TextView
        android:id="@+id/text_drink_modify_favorite_drink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableStart="@drawable/favorite_gray_18dp"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:padding="8dp"
        android:text="@string/favorite_drink"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:layout_below="@+id/text_drink_modify_add_another"/>

    <TextView
        android:id="@+id/text_drink_modify_edit_drink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableStart="@drawable/edit_gray_18dp"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:padding="8dp"
        android:text="@string/edit"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:layout_below="@+id/text_drink_modify_favorite_drink"/>

    <TextView
        android:id="@+id/text_drink_modify_remove_drink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableStart="@drawable/delete_gray_18dp"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:padding="8dp"
        android:text="@string/remove"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:layout_below="@+id/text_drink_modify_edit_drink"/>

</RelativeLayout>