<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_disclaimer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/disclaimer"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/text_disclaimer_title"
        android:layout_marginBottom="4dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/text_disclaimer_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:lineSpacingMultiplier="1.5"
        android:paddingTop="16dp"
        android:text="@string/disclaimer_body" />

    <Button
        android:id="@+id/btn_disclaimer_dismiss"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_disclaimer_body"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/dismiss"
        android:textColor="@color/colorDarkGray"
        app:backgroundTint="@color/colorWhite" />


</RelativeLayout>