<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:isScrollContainer="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".addDrink.AddDrinkFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_drink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:title="@string/fragment_add_drink_name"
            app:titleTextColor="@color/colorWhite"
            android:theme="@style/Overflow"/>

        <TextView
            android:id="@+id/text_add_drink_recents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar_add_drink"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/recents_quick_fill"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/layout_recents_foreground"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/text_add_drink_recents"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:background="#d1d1d1"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_add_drink_recents_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@color/colorWhite"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" />

            <TextView
                android:id="@+id/text_recents_empty_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no_recent_drinks" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text_add_drink_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_recents_foreground"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/favorites_quick_fill"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/layout_favorites_foreground"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/text_add_drink_favorites"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:background="#d1d1d1"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_add_drink_favorites_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@color/colorWhite"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" />

            <TextView
                android:id="@+id/text_favorites_empty_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no_favorite_drinks" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_add_drink_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_below="@id/layout_favorites_foreground">

            <TextView
                android:id="@+id/text_add_drink_name"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18sp" />

            <AutoCompleteTextView
                android:id="@+id/edit_add_drink_name"
                android:layout_width="225dp"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:inputType="text"
                android:hint="@string/empty"
                android:completionThreshold="0"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_add_drink_abv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/layout_add_drink_name"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_add_drink_abv"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/abv"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_add_drink_abv"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                tools:targetApi="o" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/percent"
                android:textColor="@color/colorBlack"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_add_drink_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/layout_add_drink_abv"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_add_drink_amount"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_add_drink_amount"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:hint="@string/empty"
                android:autofillHints=""
                tools:targetApi="o" />

            <Spinner
                android:id="@+id/spinner_add_drink_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_drink_add"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/layout_add_drink_amount"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/add"
            android:textSize="18sp"
            android:theme="@style/HomeButtonTheme" />

    </RelativeLayout>
</ScrollView>