<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_update_log_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/update_log"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/text_update_log_title"
            android:layout_marginBottom="4dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/text_update_log_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:paddingStart="8dp"
            android:paddingTop="16dp"
            android:paddingEnd="8dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_update_log_cancel"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay"
        android:layout_marginStart="8dp"
        android:layout_toStartOf="@id/btn_update_log_update"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/cancel"
        android:textColor="@color/colorDarkGray"
        app:backgroundTint="@color/colorWhite" />

    <Button
        android:id="@+id/btn_update_log_update"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay"
        android:layout_alignParentEnd="true"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/update"
        android:textColor="@color/colorDarkGray"
        app:backgroundTint="@color/colorWhite" />

</RelativeLayout>