<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title_box"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/text_bac_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/btn_bac_info_dismiss"
            android:padding="16dp"
            android:text="@string/bac_level"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_bac_info_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/empty"
            android:padding="12dp"
            android:src="@drawable/ic_close_white_24dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/info_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_box"
        android:orientation="horizontal"
        android:padding="16dp"
        android:paddingTop="32dp" >

        <TextView
            android:id="@+id/duration_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/text_bac_info_duration"
            android:paddingBottom="16dp"
            android:text="@string/drinking_duration"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/text_bac_info_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/duration_label"
            android:layout_alignParentEnd="true"
            android:paddingStart="8dp"
            android:paddingEnd="2dp"
            android:paddingBottom="16dp"
            android:textAlignment="viewEnd" />


        <TextView
            android:id="@+id/standard_drinks_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/duration_label"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/text_bac_info_standard_drinks"
            android:paddingBottom="16dp"
            android:text="@string/standard_drinks_consumed"
            android:textAlignment="viewStart"/>

        <TextView
            android:id="@+id/text_bac_info_standard_drinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/text_bac_info_duration"
            android:layout_alignTop="@+id/standard_drinks_label"
            android:layout_alignBottom="@+id/standard_drinks_label"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:paddingBottom="16dp" />

        <TextView
            android:id="@+id/sober_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/standard_drinks_label"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/text_bac_info_time_to_sober"
            android:paddingBottom="16dp"
            android:text="@string/time_to_sober"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/text_bac_info_time_to_sober"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_bac_info_standard_drinks"
            android:layout_alignStart="@+id/text_bac_info_standard_drinks"
            android:layout_alignTop="@+id/sober_label"
            android:layout_alignBottom="@+id/sober_label"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="2dp"
            android:paddingBottom="16dp" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph_bac_info_declining_bac"
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:layout_below="@id/text_bac_info_time_to_sober" />

    </RelativeLayout>

</RelativeLayout>