<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_bac_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bac_level"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="8dp"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/text_bac_info_title" />

    <RelativeLayout
        android:id="@+id/info_container"
        android:layout_below="@id/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/duration_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/drinking_duration"
            android:textColor="@color/colorDarkGray"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/text_bac_info_duration"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/text_bac_info_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/duration_label"
            android:layout_alignParentEnd="true"
            android:paddingStart="8dp"
            android:paddingEnd="2dp"
            android:paddingBottom="16dp"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorDarkGray" />


        <TextView
            android:id="@+id/standard_drinks_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/standard_drinks_consumed"
            android:textColor="@color/colorDarkGray"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/text_bac_info_standard_drinks"
            android:textAlignment="viewStart"
            android:layout_below="@+id/duration_label"/>

        <TextView
            android:id="@+id/text_bac_info_standard_drinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/text_bac_info_duration"
            android:layout_alignTop="@+id/standard_drinks_label"
            android:layout_alignBottom="@+id/standard_drinks_label"
            android:layout_alignParentEnd="true"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:paddingBottom="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorDarkGray" />

        <TextView
            android:id="@+id/sober_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/time_to_sober"
            android:textColor="@color/colorDarkGray"
            android:layout_toStartOf="@+id/text_bac_info_time_to_sober"
            android:textAlignment="viewStart"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/standard_drinks_label"/>

        <TextView
            android:id="@+id/text_bac_info_time_to_sober"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_bac_info_standard_drinks"
            android:layout_alignStart="@+id/text_bac_info_standard_drinks"
            android:layout_alignTop="@+id/sober_label"
            android:layout_alignBottom="@+id/sober_label"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="2dp"
            android:paddingBottom="16dp"
            android:textColor="@color/colorDarkGray"
            tools:ignore="HardcodedText" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_bac_info_dismiss"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_container"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/dismiss"
        android:textColor="@color/colorDarkGray"
        app:backgroundTint="@color/colorWhite" />

</RelativeLayout>